--- a/ShowPinValuesUi/MainPage.xaml
+++ b/ShowPinValuesUi/MainPage.xaml
@@ -11,10 +11,10 @@
         <Image x:Name="image" Margin="10,37,10,-17" Source="Pi2PinLayout.png"/>
         <TextBlock x:Name="gpio18TextBlock" HorizontalAlignment="Left" Margin="914,215,0,0" TextWrapping="Wrap" Text="GPIO 18" VerticalAlignment="Top" Width="102"/>
         <TextBlock x:Name="gpio27TextBlock" HorizontalAlignment="Left" Margin="436,243,0,0" TextWrapping="Wrap" Text="GPIO_27" VerticalAlignment="Top" Width="60" TextAlignment="Right"/>
-        <TextBlock x:Name="gpio22TextBlock" HorizontalAlignment="Left" Margin="437,272,0,0" TextWrapping="Wrap" Text="GPIO_22" VerticalAlignment="Top" Width="60" SelectionChanged="textBlock_Copy_SelectionChanged" TextAlignment="Right"/>
+        <TextBlock x:Name="gpio22TextBlock" HorizontalAlignment="Left" Margin="437,272,0,0" TextWrapping="Wrap" Text="GPIO_22" VerticalAlignment="Top" Width="60" TextAlignment="Right"/>
         <TextBlock x:Name="gpio13TextBlock" HorizontalAlignment="Left" Margin="438,535,0,0" TextWrapping="Wrap" Text="GPIO_13" VerticalAlignment="Top" Width="60" TextAlignment="Right"/>
         <TextBlock x:Name="gpio5TextBlock" HorizontalAlignment="Left" Margin="436,477,0,0" TextWrapping="Wrap" Text="GPIO_5" VerticalAlignment="Top" Width="60" TextAlignment="Right"/>
-        <TextBlock x:Name="gpio6TextBlock" HorizontalAlignment="Left" Margin="437,507,0,0" TextWrapping="Wrap" Text="GPIO_6" VerticalAlignment="Top" Width="60" TextAlignment="Right" SelectionChanged="gpio27TextBlock_Copy2_SelectionChanged"/>
+        <TextBlock x:Name="gpio6TextBlock" HorizontalAlignment="Left" Margin="437,507,0,0" TextWrapping="Wrap" Text="GPIO_6" VerticalAlignment="Top" Width="60" TextAlignment="Right"/>
         <TextBlock x:Name="gpio26TextBlock" HorizontalAlignment="Left" Margin="438,594,0,0" TextWrapping="Wrap" Text="GPIO_26" VerticalAlignment="Top" Width="60" TextAlignment="Right"/>
         <TextBlock x:Name="gpio23TextBlock" HorizontalAlignment="Left" Margin="915,274,0,0" TextWrapping="Wrap" Text="GPIO 23" VerticalAlignment="Top" Width="102"/>
         <TextBlock x:Name="gpio24TextBlock" HorizontalAlignment="Left" Margin="916,302,0,0" TextWrapping="Wrap" Text="GPIO 24" VerticalAlignment="Top" Width="102"/>
